Fix filenames overflowing in the queue list Long filenames are not properly contained inside the div. This fixes the problem and also adds the "title" attribute to the div so we can see the entire filename by hovering over it.

--- a/src/electron/app/css/page_index.css
+++ b/src/electron/app/css/page_index.css
@@ -209,6 +209,10 @@
 
     text-align: left;
     text-overflow: ellipsis;
+
+    max-width: 90%;
+    white-space: nowrap;
+    overflow: hidden;
 }
 
 #queue-list .download .status {
